<resources>
    <string name="app_name">E-Commerce App</string>
    <string name="discover_products">Discover Products</string>
    <string name="product_name">Product Name</string>
    <string name="_10">₹ 10</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back !!</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter email</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="search_for_products">Search for Products</string>
    <string name="no_product_found">No Product Found</string>
    <string name="sort_by">SORT BY</string>
    <string name="price_low_to_high">Price : Low to High</string>
    <string name="price_high_to_low">Price : High to Low</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="_1_100">1 - 100</string>
    <string name="_1000_5000">1000 - 5000</string>
    <string name="_100_1000">100 - 1000</string>
    <string name="category">Category</string>
    <string name="clothes">Clothes</string>
    <string name="electronics">Electronics</string>
    <string name="furniture">Furniture</string>
    <string name="shoes">Shoes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="sort">Sort</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order_now">Order Now</string>
    <string name="guest">As a Guest</string>
</resources>