<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:contentDescription="@string/home"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:contentDescription="@string/search"
        android:icon="@drawable/search_selector"
        android:title="@string/search" />

    <item
        android:id="@+id/cartFragment"
        android:contentDescription="@string/cart"
        android:icon="@drawable/cart_selector"
        android:title="@string/cart" />

    <item
        android:id="@+id/profileFragment"
        android:contentDescription="@string/profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile" />
</menu>