<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:gravity="start"
        android:text="@string/price"
        android:textColor="@color/grey"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/filterOneToHund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_100"
        android:textSize="@dimen/_11sdp"
        app:buttonTint="@color/black" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/filterHundToThousand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_100_1000"
        android:textSize="@dimen/_11sdp"
        app:buttonTint="@color/black" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/filterOneThousToFiveThous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1000_5000"
        android:textSize="@dimen/_11sdp"
        app:buttonTint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:gravity="start"
        android:text="@string/category"
        android:textColor="@color/grey"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/categoryChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        app:chipSpacingHorizontal="@dimen/_15sdp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes"
            android:textColor="@color/category_chip_text"
            android:textSize="@dimen/_13sdp"
            app:chipBackgroundColor="@color/category_chip_bg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electronics"
            android:textColor="@color/category_chip_text"
            android:textSize="@dimen/_13sdp"
            app:chipBackgroundColor="@color/category_chip_bg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/furniture"
            android:textColor="@color/category_chip_text"
            android:textSize="@dimen/_13sdp"
            app:chipBackgroundColor="@color/category_chip_bg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes"
            android:textColor="@color/category_chip_text"
            android:textSize="@dimen/_13sdp"
            app:chipBackgroundColor="@color/category_chip_bg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miscellaneous"
            android:textColor="@color/category_chip_text"
            android:textSize="@dimen/_13sdp"
            app:chipBackgroundColor="@color/category_chip_bg" />
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>