<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductDescActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/productBackBtn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/back_arrow" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="sans-serif-black"
                android:text="@string/product_name"
                android:textSize="@dimen/_20sdp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/productImageCV"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_160sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_12sdp">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ecommerce_app_icon" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/productDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="sans-serif-black"
                android:text="@string/description"
                android:textSize="@dimen/_17sdp" />

        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/productAddToCartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/app_theme_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/productOrderBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/productOrderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:text="@string/order_now"
                android:textColor="@color/black"
                android:backgroundTint="#40D4E3"
                android:textAllCaps="false"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/productAddToCartBtn"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>