<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:layout_marginBottom="@dimen/_9sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_5sdp"
        android:id="@+id/cartCV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cartItemImage"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ecommerce_app_icon"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toTopOf="@id/cartItemPrice"
                app:layout_constraintStart_toEndOf="@+id/cartItemImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cartItemImage"
                app:layout_constraintTop_toBottomOf="@id/cartItemName" />

            <ImageButton
                android:id="@+id/cartItemDecreBtn"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:background="@color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/cartItemQty"
                app:layout_constraintEnd_toStartOf="@+id/cartItemQty"
                app:layout_constraintTop_toTopOf="@+id/cartItemQty"
                app:srcCompat="@drawable/minus"
                app:tint="@color/grey" />

            <TextView
                android:id="@+id/cartItemQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7sdp"
                android:text="@string/quantity"
                app:layout_constraintBottom_toBottomOf="@+id/cartItemIncreBtn"
                app:layout_constraintEnd_toStartOf="@+id/cartItemIncreBtn"
                app:layout_constraintTop_toTopOf="@+id/cartItemIncreBtn" />

            <ImageButton
                android:id="@+id/cartItemIncreBtn"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_33sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/plus"
                android:background="@color/transparent"
                app:tint="@color/grey" />

            <ImageButton
                android:id="@+id/cartItemRemoveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_9sdp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cartItemIncreBtn"
                app:layout_constraintStart_toStartOf="@+id/cartItemDecreBtn"
                app:layout_constraintTop_toBottomOf="@+id/cartItemIncreBtn"
                app:srcCompat="@drawable/trash" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>